--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
 }
 
 .main {
-  -ms-flex: 70%; 
+  -ms-flex: 70%;
   flex: 70%;
   background-color: white;
   padding: 20px;
@@ -122,7 +122,7 @@ html {
 }
 
 .about-section {
-  padding: 50px;
+  padding: 0 1px;
   text-align: center;
   background-color: #474e5d;
   color: white;
